<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:title="@string/title_home"
        android:icon="@drawable/ic_nav_home" />
    <item
        android:id="@+id/nav_calendar"
        android:title="@string/title_calendar"
        android:icon="@drawable/ic_nav_calendar" />
    <item
        android:id="@+id/nav_assets"
        android:title="@string/title_assets"
        android:icon="@drawable/ic_nav_assets" />
    <item
        android:id="@+id/nav_stats"
        android:title="@string/title_stats"
        android:icon="@drawable/ic_nav_stats" />
    <item
        android:id="@+id/nav_settings"
        android:title="@string/title_settings"
        android:icon="@drawable/ic_nav_settings" />
</menu>

